lvl_8/helloworld-gke/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloworld-ip
  labels:
    app: hello
spec:
  defaultBackend:
    service:
      name: hello
      port:
        number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
